simple cmake config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,13 @@
 cmake_minimum_required(VERSION 3.12)
-project(itmo-llp)
+project(itmo-llp
+        VERSION 0.0.0 # [<major>[.<minor>[.<patch>[.<tweak>]]]]
+        DESCRIPTION "LLP labs"
+        #        [HOMEPAGE_URL <url-string>]
+        LANGUAGES CXX
+)
 
-include_directories(store)
+#include_directories(store)
+
+add_executable(main
+    main.cpp
+)
