--- a/store/CMakeLists.txt
+++ b/store/CMakeLists.txt
@@ -1,12 +1,17 @@
 cmake_minimum_required(VERSION 3.12)
 project(store
         VERSION 0.0.0 # [<major>[.<minor>[.<patch>[.<tweak>]]]]
-        DESCRIPTION "Module implements API for low level managing
-        data in specific way (document tree & memory mapping)"
-        #        [HOMEPAGE_URL <url-string>]
-        #        [LANGUAGES <language-name>...]
+        DESCRIPTION "Module implements API for low level managing \
+            data in specific way (document tree & memory mapping)"
+        LANGUAGES C CXX
 )
 
-add_executable(store
-        main.cpp
+add_library(store STATIC)
+
+target_include_directories(store PRIVATE inc)
+
+target_sources(store PRIVATE
+        src/store.cpp
+        src/store2.cpp
+        #...
 )
