--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 project(tests)
 
-## [FROM GOOGLE TEST DOCS[
+# FROM GOOGLE TEST DOCS {
 include(FetchContent)
 FetchContent_Declare(
         googletest
@@ -11,7 +11,7 @@ FetchContent_Declare(
 # For Windows: Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
-## ]FROM GOOGLE TEST DOCS]
+## } FROM GOOGLE TEST DOCS
 
 add_library(GTest::GTest INTERFACE IMPORTED)
 target_link_libraries(GTest::GTest INTERFACE gtest_main)
@@ -19,12 +19,13 @@ target_link_libraries(GTest::GTest INTERFACE gtest_main)
 include(GoogleTest)
 
 #[[
-Function for quick setup tests for every needed module.
-- `lib-name` is module name I'm testing.
-- `list-of-tests` is list which contains names of test files
-  without `.cpp` extension.
-NOTE: Don't forget to wrap variable of list with quotation
-      marks to pass it list.
+    Function for quick setup tests for every needed module.
+    - `lib-name` is module name I'm testing.
+    - `list-of-tests` is list which contains names of test files
+      without `.cpp` extension.
+
+    NOTE: Don't forget to wrap variable of list with quotation
+          marks to pass it list.
 ]]
 function(SETUP_LIST_OF_TESTS lib-name list-of-tests)
     foreach (test-name ${list-of-tests})
@@ -36,11 +37,10 @@ function(SETUP_LIST_OF_TESTS lib-name list-of-tests)
         )
         target_include_directories(${test-name}_gtests
             PUBLIC
-                ${CMAKE_SOURCE_DIR}#/${lib-name}/include
+                ${CMAKE_SOURCE_DIR}
         )
         gtest_discover_tests(${test-name}_gtests)
     endforeach ()
 endfunction()
 
 add_subdirectory(store)
-#[[ add_subdirectory(...) ]]
