--- a/store/CMakeLists.txt
+++ b/store/CMakeLists.txt
@@ -14,3 +14,4 @@ target_include_directories(store PRIVATE ${CMAKE_SOURCE_DIR})
 add_subdirectory(dom)
 add_subdirectory(file)
 add_subdirectory(query)
+add_subdirectory(memory)
