draft memory management hierarchy

--- a/store/CMakeLists.txt
+++ b/store/CMakeLists.txt
@@ -15,3 +15,14 @@ add_subdirectory(dom)
 add_subdirectory(fs)
 add_subdirectory(query)
 add_subdirectory(memory)
+
+add_executable(main_store)
+target_sources(main_store
+        PRIVATE
+        main.cpp
+)
+
+target_link_libraries(main_store
+        PUBLIC
+        store
+)
