--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 enable_testing()
 
 add_subdirectory(store)
+add_subdirectory(query)
+add_subdirectory(client)
+add_subdirectory(server)
 add_subdirectory(tests)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-add_subdirectory(query)
